--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-	<string name="app_name">KonturTestapp</string>
+	<string name="app_name">Contacts Testapp</string>
 	<string name="search">Search</string>
 	<string name="contacts">Contacts</string>
 	<string name="data_loading_error">Data loading error</string>
